# BSProject2526

./: .Rhistory  BF.R  BF.Rmd  Function_p(XA).Rmd  P_DAG.R  P_DAGM.R  P_DAGM_puntuale.R  P_DAG_puntuale.R  P_XA.R  Per_vedere_codice_Skeleton.R  README.md  doc.txt  ex_data_sim.R  gaussCItest + zStat.R  log.norm_cost.R  main.tex  my_skeleton.R  pacchetto_hdi.R  pcalg_package_explanation.R  personalized_my_skeleton.R  personalized_my_skeleton_senza_stable_fast.R  references.bib  skeleton.R
.Rproj.user/C78DB587/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/C78DB587/sources/per/t/: D6D1E2DD  D6D1E2DD-contents
.Rproj.user/C78DB587/sources/prop/: EBCCE4B5  INDEX
.Rproj.user/shared/notebooks/: paths
.Rproj.user/shared/notebooks/58D812BA-Function_p(XA)/1/C78DB58721ad1f54/: chunks.json
.Rproj.user/shared/notebooks/58D812BA-Function_p(XA)/1/s/: chunks.json
C++ codes/: BayesCore.cpp  BayesCore.h  CMakeLists.txt  RcppInterface.cpp  main.cpp
Plots varying q & n/: Results_simulations.csv
Plots_subsamples/: Results_simulations_subsamples.csv
funzioni R/: BF.R  BF.Rmd  P_DAGM.R  P_DAGM_puntuale.R  compute_metrics.R  generate_DAG.R  log.P_DAGM.R  log.P_DAGM_puntuale.R  log.multivariate_gamma.R  log.p_XA.R  personalized_my_skeleton.R  personalized_my_skeleton_senza_stable_fast.R
old/: Function_p(XA).Rmd  pxastable.R
src/: gies.cpp
test/: .Rhistory  REPORT q = 1000.docx  Riboflavin_Bayes_q500.rds  Riboflavin_Freq_q500.rds  ex_data_sim.R  main_simulation_1.R  newplotgenerator.R  plot_performances.R  sub_graph_1000.R  test_dataset_riboflavin.R  test_dataset_riboflavin_Ari.R  test_dataset_riboflavin_with_screening.R  test_my_skeleton.R  test_simulations.R  test_simulations_Ari.R  test_simulations_Ari_BIG_NUMBERS.R  test_simulations_subsample.R  test_tito.R  variable_selection_varbvs+horseshoe.R
test/RDS/: Riboflavin_Bayes_q50.rds  Riboflavin_Freq_q50.rds
test/variable_selection_INUTILE/: variable_selection_varbvs+horseshoe.R  variable_selection_varbvs.R
